--- a/package.json
+++ b/package.json
@@ -1,38 +1,52 @@
 {
   "name": "spam-shield",
-  "version": "3.0.0",
-  "description": "Spam message classifier and IP address reputation database and web interface.",
-  "keywords": [
-    "spam",
-    "api",
-    "ip",
-    "repuation"
-  ],
-  "homepage": "https://github.com/headwalluk/spam-shield#readme",
-  "bugs": {
-    "url": "https://github.com/headwalluk/spam-shield/issues"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+ssh://git@github.com/headwalluk/spam-shield.git"
-  },
-  "license": "MIT",
-  "author": "headwaluk",
-  "type": "commonjs",
-  "main": "./src/app.js",
+  "version": "0.1.0",
+  "description": "A Node.js application for spam detection and IP reputation management.",
+  "main": "src/server.js",
   "scripts": {
-    "start": "nodemon",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node src/server.js",
+    "dev": "nodemon src/server.js",
+    "test": "jest",
+    "format": "prettier --write .",
+    "format:check": "prettier --check .",
+    "lint": "eslint . --ext .js",
+    "lint:fix": "eslint . --ext .js --fix",
+    "migrate:make": "knex migrate:make",
+    "migrate:latest": "knex migrate:latest",
+    "migrate:rollback": "knex migrate:rollback",
+    "seed:run": "knex seed:run"
   },
   "dependencies": {
-    "@headwall/easy-cronjs": "^1.1.4",
-    "@headwall/qw-render": "^1.0.10",
-    "@headwall/trusted-network-providers": "^1.6.0",
-    "body-parser": "^2.2.0",
-    "compression": "^1.8.0",
-    "cookie-parser": "^1.4.7",
-    "express": "^4.21.2",
-    "helmet": "^8.1.0",
-    "nodemon": "^3.1.9"
-  }
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
+    "connect-session-knex": "^3.0.1",
+    "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "express-session": "^1.18.2",
+    "knex": "^3.1.0",
+    "mysql2": "^3.11.3",
+    "passport": "^0.7.0",
+    "nodemailer": "^6.9.14",
+    "passport-headerapikey": "^1.2.2",
+    "passport-local": "^1.0.0",
+    "pug": "^3.0.2"
+  },
+  "devDependencies": {
+    "jest": "^27.0.6",
+    "prettier": "^3.3.3",
+    "eslint": "^9.12.0",
+    "eslint-config-prettier": "^9.1.0",
+    "nodemon": "^2.0.12",
+    "supertest": "^6.3.3"
+  },
+  "keywords": [
+    "spam",
+    "ip-reputation",
+    "nodejs",
+    "express",
+    "pug"
+  ],
+  "author": "Paul Faulkner",
+  "license": "MIT"
 }
