Added a proper build workflow with asset optimisation. The front-end now has basic API Key management.

--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "spam-shield",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "description": "A Node.js application for spam detection and IP reputation management.",
   "main": "src/server.js",
   "scripts": {
-    "start": "node src/server.js",
-    "dev": "nodemon src/server.js",
+    "start": "NODE_ENV=production node src/server.js",
+    "dev": "concurrently -n server,assets -c green,blue \"nodemon src/server.js\" \"npm:build -- --watch\"",
+    "clean": "rimraf src/public/build/*",
+    "build": "npm run clean && node build.js",
     "test": "jest",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
@@ -17,30 +19,37 @@
     "seed:run": "knex seed:run"
   },
   "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "body-parser": "^1.19.0",
-    "connect-session-knex": "^3.0.1",
+    "@popperjs/core": "^2.11.8",
+    "bcryptjs": "^3.0.3",
+    "body-parser": "^2.2.0",
+    "bootstrap": "^5.3.3",
+    "bootstrap-icons": "^1.11.3",
+    "connect-session-knex": "^5.0.0",
     "cors": "^2.8.5",
-    "dotenv": "^10.0.0",
-    "express": "^4.17.1",
+    "dotenv": "^17.2.3",
+    "express": "^5.1.0",
     "express-session": "^1.18.2",
     "knex": "^3.1.0",
     "mysql2": "^3.11.3",
+    "nodemailer": "^7.0.10",
     "passport": "^0.7.0",
-    "nodemailer": "^6.9.14",
     "passport-headerapikey": "^1.2.2",
     "passport-local": "^1.0.0",
     "pug": "^3.0.2",
-    "swagger-ui-express": "^5.0.0",
-    "swagger-jsdoc": "^6.2.8"
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0"
   },
   "devDependencies": {
-    "jest": "^27.0.6",
-    "prettier": "^3.3.3",
+    "concurrently": "^8.2.2",
+    "esbuild": "^0.23.0",
     "eslint": "^9.12.0",
-    "eslint-config-prettier": "^9.1.0",
-    "nodemon": "^2.0.12",
-    "supertest": "^6.3.3"
+    "eslint-config-prettier": "^10.1.8",
+    "jest": "^30.2.0",
+    "nodemon": "^3.1.10",
+    "npm-run-all": "^4.1.5",
+    "prettier": "^3.3.3",
+    "rimraf": "^6.1.0",
+    "supertest": "^7.1.4"
   },
   "keywords": [
     "spam",
