--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "spam-shield",
-  "version": "0.3.0",
+  "version": "0.4.0",
   "description": "A Node.js application for spam detection and IP reputation management.",
   "main": "src/server.js",
   "scripts": {
     "start": "NODE_ENV=production node src/server.js",
     "dev": "concurrently -n server,assets -c green,blue \"nodemon src/server.js\" \"npm:build -- --watch\"",
-    "clean": "rimraf src/public/build/*",
+    "clean": "rimraf public/build/*",
     "build": "npm run clean && node build.js",
     "test": "jest",
     "format": "prettier --write .",
@@ -30,12 +30,12 @@
     "express": "^5.1.0",
     "express-session": "^1.18.2",
     "knex": "^3.1.0",
+    "handlebars": "^4.7.8",
     "mysql2": "^3.11.3",
     "nodemailer": "^7.0.10",
     "passport": "^0.7.0",
     "passport-headerapikey": "^1.2.2",
     "passport-local": "^1.0.0",
-    "pug": "^3.0.2",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0"
   },
@@ -55,8 +55,7 @@
     "spam",
     "ip-reputation",
     "nodejs",
-    "express",
-    "pug"
+    "express"
   ],
   "author": "Paul Faulkner",
   "license": "MIT"
