Getting the page structure right and sorting out some Bootstrap start-up issues. The admin users front-end page is functional now, and API Keys can be created, relabelled and deleted.

--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "migrate:make": "knex migrate:make",
     "migrate:latest": "knex migrate:latest",
     "migrate:rollback": "knex migrate:rollback",
-    "seed:run": "knex seed:run"
+    "seed:run": "knex seed:run",
+    "verify:html": "node scripts/verify-html.js"
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
