Tidied-up serving HTML content. Server-side injection of the header & footer - much cleaner. In-memory caching of the resultant HTML. Nice and fast.

--- a/.gitignore
+++ b/.gitignore
@@ -141,3 +141,6 @@ src/public/build/*
 # Test messages may contain personally identifiable information
 test-messages/known-spam/*.json
 test-messages/known-ham/*.json
+
+# PM2 ecosystem config (may contain server-specific settings)
+ecosystem.config.js
